# django_firefly_tasks

./: .gitignore  .pre-commit-config.yaml  local_build.sh  pyproject.toml  requirements.txt  runtests.py
.github/workflows/: formating.yml  python-publish.yml  testing.yml
docs/: .buildinfo  .buildinfo.bak  README.html  commands.html  conf.html  exceptions.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tasks.html  utils.html
docs/.doctrees/: README.doctree  commands.doctree  conf.doctree  environment.pickle  exceptions.doctree  index.doctree  readme.doctree  tasks.doctree  utils.doctree
docs/_modules/: index.html
docs/_modules/django_firefly_tasks/: exceptions.html  utils.html
docs/_sources/: conf.md.txt  index.rst.txt  tasks.md.txt  utils.rst.txt
docs_source/: README.md  build.sh  commands.md  conf.py  exceptions.rst  tasks.md
src/django_simple_tasks/: apps.py  decorators.py  models.py  utils.py
src/django_simple_tasks/_private/: consts.py  consumers.py  processors.py  utils.py
src/django_simple_tasks/management/commands/: consume_tasks.py  detete_completed_tasks.py  detete_failed_tasks.py  mark_failed_tasks_consumable.py
src/django_simple_tasks/migrations/: 0001_initial.py
tests/: models.py  tasks.py  utils.py
tests/tests/: test_commands.py  test_db.py  test_tasks.py
